[metadata]
name = FileCache-Crackalacken
version = 0.0.1
url = https://github.com/DonaldNgai/FileCache
author = Donald Ngai
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
description = A lightweight caching library to index a file system.
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.6